--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -1,9 +1,9 @@
-name: Build
+name: Analyse
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
-  build:
+  sonar:
     runs-on: ubuntu-latest
 
     steps:
