--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 
         <aem.sdk.api.version>2023.6.12255.20230608T053118Z-230400</aem.sdk.api.version>
         <aemanalyser.version>1.5.8</aemanalyser.version>
+
+        <sonar.organization>orbinson</sonar.organization>
+        <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
