--- a/all/pom.xml
+++ b/all/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>be.orbinson.aem</groupId>
-        <artifactId>dictionary-translator</artifactId>
+        <artifactId>aem-dictionary-translator</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>dictionary-translator.all</artifactId>
+    <artifactId>aem-dictionary-translator.all</artifactId>
     <packaging>content-package</packaging>
     <name>All</name>
     <description>All package for the Dictionary Translator</description>
@@ -27,25 +27,25 @@
                     <embeddeds>
                         <embedded>
                             <groupId>be.orbinson.aem</groupId>
-                            <artifactId>dictionary-translator.ui.apps</artifactId>
+                            <artifactId>aem-dictionary-translator.ui.apps</artifactId>
                             <type>zip</type>
-                            <target>/apps/dictionary-translator-packages/application/install</target>
+                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
                             <groupId>be.orbinson.aem</groupId>
-                            <artifactId>dictionary-translator.core</artifactId>
-                            <target>/apps/dictionary-translator-packages/application/install</target>
+                            <artifactId>aem-dictionary-translator.core</artifactId>
+                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
                             <groupId>be.orbinson.aem</groupId>
-                            <artifactId>dictionary-translator.ui.config</artifactId>
+                            <artifactId>aem-dictionary-translator.ui.config</artifactId>
                             <type>zip</type>
-                            <target>/apps/dictionary-translator-packages/application/install</target>
+                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
                             <groupId>org.apache.commons</groupId>
                             <artifactId>commons-csv</artifactId>
-                            <target>/apps/dictionary-translator-packages/application/install</target>
+                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                     </embeddeds>
                 </configuration>
@@ -109,18 +109,18 @@
     <dependencies>
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.ui.apps</artifactId>
+            <artifactId>aem-dictionary-translator.ui.apps</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
         </dependency>
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.core</artifactId>
+            <artifactId>aem-dictionary-translator.core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.ui.config</artifactId>
+            <artifactId>aem-dictionary-translator.ui.config</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
         </dependency>
