--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>be.orbinson.aem</groupId>
-        <artifactId>dictionary-translator</artifactId>
+        <artifactId>aem-dictionary-translator</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>dictionary-translator.ui.apps</artifactId>
+    <artifactId>aem-dictionary-translator.ui.apps</artifactId>
     <packaging>content-package</packaging>
     <name>UI Apps</name>
     <description>UI Apps package for the Dictionary Translator</description>
@@ -26,12 +26,12 @@
                         <cloudManagerTarget>none</cloudManagerTarget>
                     </properties>
                     <group>be.orbinson.aem</group>
-                    <name>dictionary-translator.ui.apps</name>
+                    <name>aem-dictionary-translator.ui.apps</name>
                     <packageType>application</packageType>
                     <repositoryStructurePackages>
                         <repositoryStructurePackage>
                             <groupId>be.orbinson.aem</groupId>
-                            <artifactId>dictionary-translator.ui.apps.structure</artifactId>
+                            <artifactId>aem-dictionary-translator.ui.apps.structure</artifactId>
                         </repositoryStructurePackage>
                     </repositoryStructurePackages>
                     <dependencies>
@@ -73,13 +73,13 @@
     <dependencies>
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.core</artifactId>
+            <artifactId>aem-dictionary-translator.core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.ui.apps.structure</artifactId>
+            <artifactId>aem-dictionary-translator.ui.apps.structure</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
         </dependency>
