--- a/ui.config/pom.xml
+++ b/ui.config/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>be.orbinson.aem</groupId>
-        <artifactId>dictionary-translator</artifactId>
+        <artifactId>aem-dictionary-translator</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>dictionary-translator.ui.config</artifactId>
+    <artifactId>aem-dictionary-translator.ui.config</artifactId>
     <packaging>content-package</packaging>
     <name>UI Config</name>
     <description>UI Config package for the Dictionary Translator</description>
@@ -31,7 +31,7 @@
                     <repositoryStructurePackages>
                         <repositoryStructurePackage>
                             <groupId>be.orbinson.aem</groupId>
-                            <artifactId>dictionary-translator.ui.apps.structure</artifactId>
+                            <artifactId>aem-dictionary-translator.ui.apps.structure</artifactId>
                         </repositoryStructurePackage>
                     </repositoryStructurePackages>
                 </configuration>
@@ -46,7 +46,7 @@
     <dependencies>
         <dependency>
             <groupId>be.orbinson.aem</groupId>
-            <artifactId>dictionary-translator.ui.apps.structure</artifactId>
+            <artifactId>aem-dictionary-translator.ui.apps.structure</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
         </dependency>
