--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 # Do not push builds into the repository
-*/target
+target/
 
 # Ignore VLT meta files
 .vlt
 
 # Maven files
-.mvn/maven.config
-**/pom.xml.versionsBackup
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
 
 # Ignore Mac meta files
 .DS_Store
-._.DS_Store
 ._*
 
 # Ignore IntelliJ IDEA files
