Use correct user mapping for service resource resolver

--- a/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-dictionary-service.cfg.json
+++ b/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-dictionary-service.cfg.json
@@ -1,5 +1,5 @@
 {
   "user.mapping": [
-    "be.orbinson.aem.dictionary-translator.core:dictionary-service=[dictionary-service]"
+    "be.orbinson.aem.aem-dictionary-translator.core:dictionary-service=[dictionary-service]"
   ]
 }
