--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           name: ${{ steps.update-changelog.outputs.release-version }}
           tag_name: ${{ steps.changelog.outputs.release-version }}
-          files: all/target/aem-groovy-console-all-*.zip
+          files: all/target/aem-dictionary-translator.all-*.zip
           body: ${{ steps.changelog.outputs.release-notes }}
 
       - name: Next SNAPSHOT version
