--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.1.5-SNAPSHOT</version>
 
     <name>AEM Dictionary Translator</name>
-    <description>Tool to translate AEM i18 labels for internationalization</description>
+    <description>Tool to translate AEM i18 dictionaries for internationalization</description>
 
     <modules>
         <module>all</module>
