--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,27 +3,7 @@ name: Build
 on: [ push, pull_request ]
 
 jobs:
-  build:
-    name: Maven build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: 11
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build
-        run: mvn --batch-mode --update-snapshots install
+  call-workflow:
+    uses: orbinson/workflows/.github/workflows/aem-maven-build.yml@main
+    with:
+      java-version: 11
