--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,11 @@
     <modules>
         <module>all</module>
         <module>core</module>
+        <module>it.content</module>
         <module>ui.apps</module>
         <module>ui.apps.structure</module>
         <module>ui.config</module>
+        <module>ui.tests</module>
     </modules>
 
     <url>https://github.com/orbinson/aem-dictionary-translator</url>
@@ -80,7 +82,7 @@
         <componentName>Dictionary Translator</componentName>
         <componentGroupName>Orbinson Tools</componentGroupName>
 
-        <aem.version>6.5.17.0001</aem.version>
+        <aem.version>6.5.17</aem.version>
         <aemanalyser.version>1.6.6</aemanalyser.version>
 
         <sonar.organization>orbinson</sonar.organization>
@@ -474,6 +476,16 @@ Bundle-DocURL:
                         </execution>
                     </executions>
                 </plugin>
+                    <plugin>
+                        <groupId>com.github.eirslett</groupId>
+                        <artifactId>frontend-maven-plugin</artifactId>
+                        <version>1.15.1</version>
+                        <configuration>
+                            <nodeVersion>v22.11.0</nodeVersion>
+                            <npmVersion>10.9.0</npmVersion>
+                            <installDirectory>${project.build.directory}</installDirectory>
+                        </configuration>
+                    </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -562,7 +574,7 @@ Bundle-DocURL:
             <dependency>
                 <groupId>io.wcm.maven</groupId>
                 <artifactId>io.wcm.maven.aem-dependencies</artifactId>
-                <version>${aem.version}</version>
+                <version>${aem.version}.0001</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
