--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Build
 on: [ push, pull_request ]
 
 jobs:
-  aem-maven-build:
-    uses: orbinson/workflows/.github/workflows/aem-maven-build.yml@main
-    with:
-      java-version: 11
+#  aem-maven-build:
+#    uses: orbinson/workflows/.github/workflows/aem-maven-build.yml@main
+#    with:
+#      java-version: 11
 
   ui-tests:
     name: UI Tests
@@ -14,7 +14,7 @@ jobs:
     needs: aem-maven-build
     services:
       aem-author:
-        image: ghcr.io/orbinson/aem-author:2024.10.18459.20241031T210302Z-241000
+        image: ghcr.io/orbinson/aem-sdk:author-2024.10.18459.20241031T210302Z-241000
         credentials:
           username: ${{ secrets.GHCR_USER }}
           password: ${{ secrets.GHCR_TOKEN }}
