Fix analyser warnings

--- a/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator.config
+++ b/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator.config
@@ -1,5 +1,5 @@
 scripts=["
-    create path (sling:OrderedFolder) /apps(sling:folder)/cq(nt:folder)/core(nt:folder)/content/nav/tools
+    create path (sling:OrderedFolder) /apps(sling:folder)/cq(nt:folder)/core(nt:folder)/content/nav(nt:unstructured)/tools(nt:unstructured)
     create path (sling:Folder) /content/dictionaries
     set properties on /content/dictionaries
         set jcr:title{String} to Dictionaries
