Fix update type syntax error

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,4 @@ updates:
       - dependency-name: "io.wcm.maven:io.wcm.maven.aem-dependencies"
         versions: [ "[6.5.17.*,)" ]
       - dependency-name: "biz.aQute.bnd:bnd-maven-plugin"
-        update-types: [ "version-update:major" ]
+        update-types: [ "version-update:semver-major" ]
