Fix maven range issue

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "io.wcm.maven:io.wcm.maven.aem-dependencies"
-        versions: [ "[6.5.17.*,)" ]
+        versions: [ "[6.5.17,)" ]
       - dependency-name: "biz.aQute.bnd:bnd-maven-plugin"
         update-types: [ "version-update:semver-major" ]
