Add name for workflow call

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   aem-maven-build:
+    name: Call Workflow
     uses: orbinson/workflows/.github/workflows/aem-maven-build.yml@main
     with:
       java-version: 11
